fixtures/compile-error/main.cpp
#include "Byte.h"

int main() {
    Byte b(13);
    return b.toInt();
}
